--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     </nav>
 
     <!-- END NAVBAR -->
+
+    
     <!-- HEADER HOME -->
 
     <section class="header-section" id="header">
@@ -69,8 +71,8 @@
               </div>
             </div>
           </div>
-          <div class="col mb-5 md-5 mt-7">
-            <img src="image/moreno.jpg" class="header-img" alt="">
+          <div class="col mb-7 md-5 mt-5 text-end" style="border-radius: 75;">
+            <img src="image/moreno.jpg" width="500" class="header-img" alt="">
           </div>
         </div>
       </div>
@@ -104,6 +106,9 @@
   </section>
 
   <!-- END ABOUT ME -->
+
+
+
 
     <!-- PORTFOLIO -->
 
@@ -165,6 +170,8 @@
     </section>
 
     <!-- END PORTFOLIO -->
+
+
 
 
     <!-- SKILLS -->
